# birefnet-lora

./: .gitignore  README.md  predict.py  pyproject.toml  refactoring_plan.md  requirements.txt  run_api.py  run_train.py  train.py
config/: model.yaml  tune.yaml
finetune/: adapters.py  config.py  dataset.py  loss.py  model.py  train.py  verify.ipynb
finetune/models/: birefnet.py
notebooks/: 01_predict.ipynb
src/: build.py
src/adapt/: fuse.py  inject.py  layer.py  overlay.py  wrap.py
src/api/: app.py  codec.py  routes.py  schema.py
src/config/: model.yaml  tune.yaml
src/data/: augment.py  dataset.py  input.py  io.py  letterbox.py
src/finetune/: adapters.py  loss.py  model.py  trainer.py
src/infer/: predict.py  tile.py
src/ml/: build.py  preprocess.py
src/model/: __init__.py  swin.py
src/models/: __init__.py  birefnet.py
src/predict/: run.py  tile.py
src/prepare/: augment.py  convert.py  fit.py  load.py  read.py
src/serve/: codec.py  route.py  schema.py
src/train/: loss.py  metrics.py  run.py  schedule.py  score.py  state.py  teacher.py  trainer.py  validate.py
src/utils/: io.py  misc.py
src/weight/: __init__.py
test_notebooks/: 01_build_dl.ipynb  02_loss.ipynb  03_predict.ipynb
tests/: conftest.py  test_adapters.py  test_api_health.py  test_api_predict.py  test_base_compat.py  test_build.py  test_dataset.py  test_flip.py  test_fuse.py  test_inference.py  test_io.py  test_loss.py  test_metrics.py  test_misc.py  test_model.py  test_preprocess.py  test_resume.py  test_scheduler.py  test_teacher.py  test_trainer.py
(+51 files in other folders)
