[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "birefnet-lora"
version = "0.1.0"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "albumentations",
    "Pillow",
    "PyYAML",
    "tqdm",
    "tensorboard",
    "einops",
    "kornia",
    "timm",
]
