[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "birefnet-lora"
version = "0.1.0"
dependencies = [
    "albumentations",
    "einops",
    "kornia",
    "numpy",
    "pillow",
    "pyyaml",
    "tensorboard",
    "timm",
    "torch",
    "torchvision",
    "tqdm",
]
